deployments/kubernetes/questionnaire-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: questionnaire
  namespace: evidra
spec:
  selector:
    app: questionnaire
  ports:
  - name: http
    port: 8082
    targetPort: 8082
